--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <header class="site-header">
     <h1 class="site-title">Axis Heatlh</h1>
     <h2 class="site-subtitle">- Tesco Health Hackathon</h2>
+    <img src="img/tesco-logo.svg" class="tesco-logo">
   </header> <!-- end .site-header -->
 
   <div class="wrap">
