--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Axis Heatlh | Tesco Health Hackathon</title> <!-- ADD A TITLE! -->
+  <title>Axis Heatlh</title> <!-- ADD A TITLE! -->
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link rel="apple-touch-icon" href="app-icon.png">
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
