--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,26 @@
 
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body >
 
-<a href="app.html">Demo</a>
+  <div class="homepage-bg">
+
+  <div class="homepage-conatiner">
+    <header class="homepage-header">
+      <h1 class="header-homepage-title">Axis Health</h1>
+      <a href="app.html">Demo</a>
+      <a href="app.html">Video</a>
+    </header>
+
+    <h1 class="homepage-title">Axis Health</h1>
+    <h2 class="homepage-subtitle">Access healthy choices</h2>
+
+    <span class="partner">in partnership with</span>
+    <img src="img/tesco-logo.svg" class="tesco-logo-white">
+
+  </div> <!-- end .homepage-conatiner -->
+
+  </div>
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
