add output icons

--- a/src/app.html
+++ b/src/app.html
@@ -95,7 +95,27 @@
           <span class="ingredient-quantity"></span>
           salt and pepper</li>
       </ul>
+
+          <div class="output-container">
+            <div>
+              <img src="img/im-01.svg">
+              <span>Add to Basket</span>
+            </div>
+
+            <div>
+              <img src="img/im-02.svg">
+              <span>Print</span>
+            </div>
+
+            <div>
+              <img src="img/im-03.svg">
+              <span>Share</span>
+            </div>
+          </div>
+
     </div> <!-- end .recipe-container -->
+
+
 
   </div> <!-- end .wrap -->
 
