add extra pages

--- a/src/app.html
+++ b/src/app.html
@@ -17,11 +17,13 @@
 </head>
 <body>
 
-  <header class="site-header">
-    <h1 class="site-title"><a href="index.html">Axis Heatlh</a></h1>
-    <h2 class="site-subtitle">- Tesco Health Hackathon</h2>
-    <img src="img/tesco-logo.svg" class="tesco-logo">
-  </header> <!-- end .site-header -->
+  <header class="homepage-header">
+      <h1 class="header-homepage-title"><a href="index.html">Axis Health</a></h1>
+      <img src="img/tesco-logo.svg" class="tesco-logo-header">
+      <a href="app.html" class="nav">Demo</a>
+      <a href="video.html" class="nav">Video</a>
+      <a href="pitch.html" class="nav">Pitch</a>
+    </header>
 
   <div class="wrap">
 
