--- a/src/pitch.html
+++ b/src/pitch.html
@@ -17,21 +17,25 @@
 </head>
 <body >
 
-  <div class="homepage-bg">
+  <div class="">
 
   <div class="homepage-conatiner">
     <header class="homepage-header">
       <h1 class="header-homepage-title"><a href="index.html">Axis Health</a></h1>
+      <img src="img/tesco-logo.svg" class="tesco-logo-header">
       <a href="app.html" class="nav">Demo</a>
       <a href="video.html" class="nav">Video</a>
       <a href="pitch.html" class="nav">Pitch</a>
     </header>
 
-    <h1 class="homepage-title">Axis Health</h1>
-    <h2 class="homepage-subtitle">Access healthy choices</h2>
+    <div class="pitch-content">
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</li>
+        <li>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</li>
+        <li>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</li>
+      </ul>
 
-    <span class="partner">in partnership with</span>
-    <img src="img/tesco-logo.svg" class="tesco-logo-white">
+    </div>
 
   </div> <!-- end .homepage-conatiner -->
 
