--- a/src/video.html
+++ b/src/video.html
@@ -17,21 +17,18 @@
 </head>
 <body >
 
-  <div class="homepage-bg">
+  <div class="">
 
   <div class="homepage-conatiner">
     <header class="homepage-header">
       <h1 class="header-homepage-title"><a href="index.html">Axis Health</a></h1>
+      <img src="img/tesco-logo.svg" class="tesco-logo-header">
       <a href="app.html" class="nav">Demo</a>
       <a href="video.html" class="nav">Video</a>
       <a href="pitch.html" class="nav">Pitch</a>
     </header>
 
-    <h1 class="homepage-title">Axis Health</h1>
-    <h2 class="homepage-subtitle">Access healthy choices</h2>
-
-    <span class="partner">in partnership with</span>
-    <img src="img/tesco-logo.svg" class="tesco-logo-white">
+    <div class="pitch-content"></div>
 
   </div> <!-- end .homepage-conatiner -->
 
