--- a/src/pitch.html
+++ b/src/pitch.html
@@ -29,12 +29,43 @@
     </header>
 
     <div class="pitch-content">
-      <ul>
-        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</li>
-        <li>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</li>
-        <li>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</li>
+      <p class="intro">Axis Health helps overweight, obese, or morbidly obese families control their portions and the fat/sugar/salt content in their dinner</p>
+
+      <ul class="pitch-section">
+        <span>Competitors (with downloads from 3,000 to 25,000) include:</span>
+        <li>Convert</li>
+        <li>Gomeals</li>
+        <li>myfitnesspal</li>
       </ul>
 
+      <ul class="pitch-section">
+        <span>Multiple revenue streams:</span>
+        <li>First 7 recipes free; then pay per 10 recipes</li>
+        <li>Calories dashboard</li>
+        <li>Trend report</li>
+        <li>Additional axis including exercise and food waste</li>
+      </ul>
+
+      <ul class="pitch-section">
+        <span>Scalability:</span>
+        <li>Global potential reach</li>
+        <li>Multiple languages</li>
+        <li>Obesity is a global health problem in the first world; Mexico recently overtook the United States in obesity rates</li>
+      </ul>
+
+      <ul class="pitch-section">
+        <span>Market Size:</span>
+        <li>Upward trend in DIY dieters</li>
+        <li>Axis Health is focused on DIY Dieters; it will follow the upward trend</li>
+      </ul>
+
+      <ul class="pitch-section full">
+        <span>Team:</span>
+        <li>2 business developers</li>
+        <li>1 designer</li>
+        <li>1 coder</li>
+      </ul>
+      <p class="outro">We can include Tesco branded food for substitution as well as drive traffic to Tesco</p>
     </div>
 
   </div> <!-- end .homepage-conatiner -->
