--- a/src/video.html
+++ b/src/video.html
@@ -28,7 +28,11 @@
       <a href="pitch.html" class="nav">Pitch</a>
     </header>
 
-    <div class="pitch-content"></div>
+    <div class="video-content">
+
+      <iframe width="960" height="722" src="http://www.powtoon.com/embed/gdVsJ9yAQ8v/" frameborder="0"></iframe>
+
+    </div>
 
   </div> <!-- end .homepage-conatiner -->
 
